--- a/estudantes/templates/estudantes/minhas_bancas.html
+++ b/estudantes/templates/estudantes/minhas_bancas.html
@@ -87,27 +87,27 @@
           {% with avaliacao=banca.get_avaliacoes %}
             {% if avaliacao.objetivos %}
               <hr>
-              <b>Conceitos Banca:</b><br>
+              <b>Média dos Conceitos da Banca:</b><br>
               {% for objetivo, avaliacao in avaliacao.objetivos.items %}
-                &nbsp;&#x21A3; {{objetivo.titulo}}: {{avaliacao}}<br>
+                &nbsp;&#x21A3; {{objetivo.titulo}}: {{avaliacao.0}} ({{avaliacao.1}})<br>
               {% endfor %}
               {% if avaliacao.peso > 0 %}
-                &#10149; Nota final = <b>{{avaliacao.nota|floatformat:2}}</b><br>
+                &#10149;<b> Nota final = {{avaliacao.nota|floatformat:2}}</b><br>
               {% endif %}
               {% comment %} <small>Obs: Os conceitos e notas da banca vão variar conforme membros da banca postam suas avaliações.<br></small> {% endcomment %}
 
               {% if banca.get_observacoes_estudantes %}
                 <b style="display: inline-block; margin-top: 14px;">Observações realizadas pelos membros da banca:</b>
-                <ul>
+                
                   {% for observacao in banca.get_observacoes_estudantes %}
                     {% if observacao.observacoes_estudantes %}
-                      <li style="margin-top: 6px;">
+                    <div class="pintern" style="padding: 6px;">
                         <b>{{observacao.avaliador.get_full_name}}</b>:<br>
                         {{observacao.observacoes_estudantes|linebreaks}}
-                      </li>
+                    </div>
                     {% endif %}
                   {% endfor %}
-                </ul>
+                    
               {% endif %}
   
             {% endif %}
