--- a/estudantes/templates/estudantes/submissao_documento.html
+++ b/estudantes/templates/estudantes/submissao_documento.html
@@ -16,6 +16,8 @@
       margin-bottom: 6px;
       width: 100%;
     }
+
+    // REMOVER O ESTILO ABAIXO PINTERM
     .pintern {
       border: 1px solid grey;
       display:block;
