--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -20,6 +20,8 @@
       text-align: center;
     }
     td {padding: 4px;}
+    tr:nth-child(even) {background-color: #f2f2f2;}
+    tr:nth-child(odd) {background-color: #f9f9f9;}
     ul {
       margin-bottom: 6px;
       padding-left: 1.4em;
