colocando background nas tabelas

--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -13,6 +13,8 @@
 
   <style>
     .pesos_aval {display: none;}
+    tbody tr:nth-child(even) {background-color: #f2f2f2;}
+    tbody tr:nth-child(odd) {background-color: #f9f9f9;}
   </style>
 
 {% endblock %}
