retornos de anotação batem com tipos das páginas

--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -324,7 +324,7 @@
 
   </div>
 
-  {% include "annotation-modal.html" %}
+  {% include "annotation-modal.html" %} {% comment %} Esse é para organização prospectada só {% endcomment %}
 
   <script>
 
