--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -261,6 +261,6 @@
   {% endif %}
 
   {% include "documento-modal.html" %}
-  {% include "annotation-modal2.html" %}
+  {% include "annotation-modal2.html" %} {% comment %} Esse é para projeto e organizacao completo {% endcomment %}
 
 {% endblock %}
