--- a/templates/annotation-modal.html
+++ b/templates/annotation-modal.html
@@ -4,6 +4,7 @@
     Data: 25 de Março de 2021
 {% endcomment %}
 
+{% comment %} Esse é para organização prospectada só {% endcomment %}
 
 <script>
 
@@ -135,7 +136,7 @@
                 setTimeout(function() {location.reload();}, 0.001); // No futuro incluir a linha e evitar reload
               }
               $("#data"+organizacao).text(response.data);
-              $("#contato_autor"+organizacao).text(response.autor+": ");
+              $("#contato_autor"+organizacao).text(response.autor_nome+": ");
               $("#organizacao"+organizacao).data("anotacao", response.anotacao_id);
               $("#organizacao"+organizacao).text(texto);
               if(tipo_de_retorno == 0)
