usando uma visualização de aval pares por projeto

--- a/professores/templates/professores/avaliacoes_pares.html
+++ b/professores/templates/professores/avaliacoes_pares.html
@@ -39,12 +39,12 @@
       {% include "cabecalho_projeto.html" %}
 
       <div style="margin-top: 18px;">
-        <strong>Avaliações Intermediárias:</strong><br>
+        <strong>Avaliações de Pares Intermediárias:</strong><br>
         {% include "pares.html" with tipo_avaliacao="intermediaria" %}
       </div>
 
       <div style="margin-top: 18px;">
-        <strong>Avaliações Finais:</strong><br>
+        <strong>Avaliações de Pares Finais:</strong><br>
         {% include "pares.html" with tipo_avaliacao="final" %}
       </div>
 
