--- a/professores/templates/professores/ver_pares.html
+++ b/professores/templates/professores/ver_pares.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 {% comment %}
-    Desenvolvido para o Projeto Final de Engenharia
-    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-    Data: 6 de Abril de 2023
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 6 de Abril de 2023
 {% endcomment %}
+
+
+{% comment %} NÃO MAIS USADO  {% endcomment %}
+
 
 {% block head %}
   <style>
-    textarea {
-      max-width:100%;
-    }
+    textarea {max-width:100%;}
   </style>
 {% endblock %}
 
