--- a/organizacoes/templates/organizacoes/carrega_proposta.html
+++ b/organizacoes/templates/organizacoes/carrega_proposta.html
@@ -1,16 +1,14 @@
 {% extends "base.html" %}
 {% comment %}
-    Desenvolvido para o Projeto Final de Engenharia
-    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-    Data: 31 de Maio de 2021
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 31 de Maio de 2021
 {% endcomment %}
 
 {% block head %}
   {% load define_action %}
   <style>
-    textarea {
-      max-width:100%;
-    }
+    textarea {max-width:100%;}
   </style>
 {% endblock %}
 
