--- a/propostas/templates/propostas/publicar_propostas.html
+++ b/propostas/templates/propostas/publicar_propostas.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% comment %}
-    Desenvolvido para o Projeto Final de Engenharia
-    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-    Data: 30 de Maio de 2020
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 30 de Maio de 2020
 {% endcomment %}
 
 {% block head %}
@@ -31,13 +31,14 @@
 
   {% csrf_token %}
 
-  <span class="titulo">Publicar Propostas</span>
+  <span class="titulo">Publicação das Propostas</span>
   <br>
   
   <div>
     <span>Data planejada para liberar propostas de projetos para estudantes:</span>
     {% if data_planejada %}
       <span style="font-weight:bold;" id="data_planejada">{{data_planejada}}.</span>
+      <small class="obs">(Estudantes conseguirão ver as propostas disponíveis para aplicar nessa data)</small>
     {% else %}
       <span style="font-weight:bold;" id="data_planejada">Data para liberar propostas de projetos ainda não foi definida na agenda.</span>
     {% endif %}
@@ -53,18 +54,11 @@
   </div>
 
   <br>
-  
-  <input class="liberar" type="checkbox" id="liberadas_propostas" name="liberadas_propostas"
-         {% if user.tipo_de_usuario != 4 %}disabled data-toggle="tooltip" data-placement="bottom" title="Somente coordenadores podem alterar valor!"{% endif %}
-         {% if configuracao.liberadas_propostas %}checked{% endif %}>
-  <label style="margin-bottom: 0px;"for="liberadas_propostas"> Propostas Liberadas para Estudantes</label>
-  <small class="obs">(Estudantes conseguirão ver as propostas disponíveis para aplicar)</small>
-  <br>
 
   <label for="min_props">Mínimo de Propostas para Estudantes Selecionarem:</label>
   <input class="liberar" id="min_props" name="min_props" type="number" min="0" max="99" step="1" style="text-align:right;"
          {% if user.tipo_de_usuario != 4 %}disabled data-toggle="tooltip" data-placement="bottom" title="Somente coordenadores podem alterar valor!"{% endif %}
-         value="{{configuracao.min_props}}"/>
+         value="{{min_props}}"/>
   <span id="mess_atual" style="display: None;"> atualizado!</span>
   <br><br>
 
@@ -82,7 +76,7 @@
     }
   }
   
-  mess_liberadas({{configuracao.liberadas_propostas|lower}})
+  mess_liberadas({{liberadas_propostas|lower}})
 
   $(".liberar").change(function(evt){
 
