--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -102,14 +102,18 @@
                 {% for aval, nota, peso, descr in aluno.get_notas|dict_key:ano_semestre %} <!-- Notas -->
                     <span style="background-color:#EEF;" data-toggle="tooltip" data-html="true" animation="true" 
                     title="{{descr}}">
-                      <!-- {{aval}}({% widthratio peso 1 100 %}%)={{nota|stringformat:".1f"|unlocalize}} -->
                       {{aval}}<span class="pesos_aval">({% widthratio peso 1 100 %}%)</span
                       >={% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
+                      {% if nota == None %}
+                        <span style="color:red">??,??</span>
+                      {% endif %}
                     </span>
-                    <script>
-                      nota_linha += {{nota|unlocalize}}*{{peso|unlocalize}};
-                      peso_linha += {{peso|unlocalize}};
-                    </script>
+                    {% if nota != None and peso != None %}
+                      <script>
+                        nota_linha += {{nota|unlocalize}}*{{peso|unlocalize}};
+                        peso_linha += {{peso|unlocalize}};
+                      </script>
+                    {% endif %}
                 {% endfor %}
               </td>
               <td id="media{{aluno.id}}"> {% comment %} <!-- Média --> {% endcomment %}
