--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -41,19 +41,25 @@
   {% include "tipo_projeto.html" with com_tipo=True %}<br>
 
   {% if projeto.resumo %}
-    <div class="descricao" style="margin-top: 8px;">
+    <div class="resumo" style="margin-top: 8px;">
       <strong>Resumo do Projeto:</strong>
       {{ projeto.resumo|linebreaks }}
     </div><br>
   {% endif %}
 
   {% if projeto.abstract %}
-    <div class="descricao" style="margin-top: 8px;">
+    <div class="abstract" style="margin-top: 8px;">
       <strong>Resumo em Inglês do Projeto:</strong>
       {{ projeto.abstract|linebreaks }}
     </div><br>
   {% endif %}
 
+  {% if projeto.palavras_chave %}
+  <div class="palavras_chave" style="margin-top: 8px;">
+    <strong>Palavras-chave:</strong>
+    {{ projeto.palavras_chave|linebreaks }}
+  </div><br>
+  {% endif %}
 
   <hr>
 
