--- a/estudantes/templates/estudantes/alinhamentos_gerais.html
+++ b/estudantes/templates/estudantes/alinhamentos_gerais.html
@@ -8,6 +8,11 @@
 {% block head %}
   {% load static %}
   {% load tipo_documento %}
+  {% load get_field %}
+  <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
+  <style>  
+    textarea {max-width:100%;} // REMOVER ESTA NO STYLE.CSS
+  </style>
 {% endblock %}
 
 {% block content %}
@@ -15,18 +20,39 @@
 <span class="titulo">Alinhamentos Gerais</span>
 <br>
 
-<h5>&bull;&nbsp;<a href="https://forms.gle/3Qong25KnCYX9QWs9">Levantamento de Expectativa do PFE</a></h5><br>
+<div class="div_arredondado pintern">
+  <h5><a href="https://forms.gle/3Qong25KnCYX9QWs9">Levantamento de Expectativa do PFE</a></h5>
+</div>
 
-<h5>&bull;&nbsp;<a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}">Alocação Semanal</a></h5><br>
+<div class="div_arredondado pintern">
+  <h5><a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}">Alocação Semanal</a></h5>
+</div>
 
 {% if projeto.id == 217 %}
-<form {% if projeto %}action="{% url 'upload_site' projeto.id %}"{% endif %} method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  <label for="zipsite">Site do projeto (opcional):</label>
-  <input type="file" id="zipsite" name="zipsite" accept=".zip" {% if not projeto %}disabled{% endif %}>
-  <input class="btn btn-info btn-sm" type="submit" value="Carregar" {% if not projeto %}disabled{% endif %}><br>
-  <small>carrega um arquivo .zip com o site do projeto</small><br>
-</form>
+<div class="div_arredondado pintern">
+  <form {% if projeto %}action="{% url 'upload_site' projeto.id %}"{% endif %} method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <label for="zipsite"><b>Site do projeto (opcional)</b></label>
+    <input type="file" id="zipsite" name="zipsite" accept=".zip" {% if not projeto %}disabled{% endif %}>
+    <input class="btn btn-info btn-sm" type="submit" value="Carregar" {% if not projeto %}disabled{% endif %}><br>
+    <div style="font-size: 12px; line-height:1.0;">carrega um arquivo .zip com o site do projeto</div>
+  </form>
+</div>
+
+<div class="div_arredondado pintern">
+  <form {% if projeto %}action="{% url 'upload_pasta_projeto' projeto.id %}"{% endif %} method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <label for="pastas_do_projeto"><b>Pasta do Projeto (opcional)</b></label><br>
+    <div style="max-width: 760px;">
+      <textarea id="pastas_do_projeto" name="pastas_do_projeto" rows="4" cols="88" maxlength="{% max_length projeto 'pastas_do_projeto' %}"
+      >{% if projeto.pastas_do_projeto %}{{projeto.pastas_do_projeto}}{% endif %}</textarea>
+      <div style="display: flex; justify-content: space-between;">
+        <div style="font-size: 12px; line-height:1.0;">Links de onde se encontrar repositórios com dados dos projeto (para orientador acessar / mantenha privado)</div>
+        <div><input class="btn btn-info btn-sm" type="submit" value="Salvar" {% if not projeto %}disabled{% endif %}></div>
+      </div>
+    </div>
+  </form>
+</div>
 {% endif %}
 
 {% endblock %}
