--- a/projetos/templates/projetos/meuprojeto_aluno.html
+++ b/projetos/templates/projetos/meuprojeto_aluno.html
@@ -43,15 +43,25 @@
             {% include "display_notas_individuais.html" %}
           {% endif %}
         {% endwith %}
-  
+
         {% with site=alocado.projeto.get_site %}
         {% if site %}
           <br><br>
           <h4>Site:</h4>
           &#127760; <a href="{{site}}" target="_blank">{{request.scheme}}://{{request.get_host}}{{site}}</a>
-          <br><br>
         {% endif %}
         {% endwith %}
+        
+        {% if alocado.projeto.pastas_do_projeto %}
+          <br><br>
+          <h4>Pastas do projeto:</h4>
+          <div style="display: flex; align-items: flex-start;">
+            <div>&#128193;&nbsp;</div>
+            <div>
+              {{alocado.projeto.pastas_do_projeto|linebreaks|urlize|safe}}
+            </div>
+          </div>
+        {% endif %}
 
       {% endif %}
 
