--- a/templates/projeto.html
+++ b/templates/projeto.html
@@ -12,69 +12,68 @@
     width:auto;
     float: right;
   }
+
+  ul {
+    padding-left: 1.4em;
+  }
 </style>
 
-{% if alocado.projeto.titulo_final and alocado.projeto.titulo_final != alocado.projeto.proposta.titulo %}
-  <style>
-    h3 {display: inline;}
-  </style>
-  <h3>Título: {{alocado.projeto.titulo_final}}<br></h3>
-  <small>&nbsp;&nbsp;&nbsp;&nbsp;Título original da proposta: {{alocado.projeto.proposta.titulo}}</small><br>
-{% else %}
-  <h3>Título: {{alocado.projeto.get_titulo}}<br></h3>
-{% endif %}
-<br>
-
-<strong>Descrição:</strong> {{alocado.projeto.proposta.descricao|linebreaks|urlize}}<br>
-
-{% if alocado.projeto.proposta.expectativas %}
-  <strong>Expectativas de resultados/entregas :</strong> {{alocado.projeto.proposta.expectativas|linebreaks|urlize}}<br>
-{% endif %}
-
-{% if alocado.projeto.proposta.recursos %}
-  <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.proposta.recursos|linebreaks|urlize}}<br>
-  {% if alocado.projeto.proposta.observacoes %}
-    <strong>Outras observações :</strong> {{ alocado.projeto.proposta.observacoes|linebreaks|urlize}}<br>
+<span style="display: block; margin-bottom: 14px">
+  {% if alocado.projeto.titulo_final and alocado.projeto.titulo_final != alocado.projeto.proposta.titulo %}
+    <h3>{{alocado.projeto.titulo_final}} [{{alocado.projeto.ano}}.{{alocado.projeto.semestre}}]</h3>
+    <small>&nbsp;&nbsp;&nbsp;&nbsp;Título original da proposta: {{alocado.projeto.proposta.titulo}}</small><br>
+  {% else %}
+    <h3>{{alocado.projeto.get_titulo}} [{{alocado.projeto.ano}}.{{alocado.projeto.semestre}}]</h3>
   {% endif %}
-{% endif %}
+</span>
 
-<hr>
-{% if alocado.projeto.organizacao.logotipo %}
-  <img id="logotipo" src="{{ alocado.projeto.organizacao.logotipo.url }}" alt="{{ alocado.projeto.organizacao.sigla }}">
-{% endif %}
+<div>
+  <strong>Descrição:</strong> {{alocado.projeto.proposta.descricao|linebreaks|urlize}}<br>
 
-<h4>Organização: {{ alocado.projeto.organizacao.nome }}<br></h4><br>
-<strong>endereço:</strong> {{ alocado.projeto.organizacao.endereco|linebreaks }}<br>
-<strong>website:</strong> <a href="{{ projeto.organizacao.website }}">{{ alocado.projeto.organizacao.website }}</a><br>
+  {% if alocado.projeto.proposta.expectativas %}
+    <strong>Expectativas de resultados/entregas :</strong> {{alocado.projeto.proposta.expectativas|linebreaks|urlize}}<br>
+  {% endif %}
 
-{% if alocado.projeto.orientador %}
-  <hr>
-  <h5>Orientador(a)<br></h5>
-  <ul>
-    <li><a href="mailto:{{alocado.projeto.orientador.user.email}}">{{ alocado.projeto.orientador.user.get_full_name}} &lt;{{alocado.projeto.orientador.user.email}}&gt; </a></li>
-  </ul>
-{% endif %}
+  {% if alocado.projeto.proposta.recursos %}
+    <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.proposta.recursos|linebreaks|urlize}}
+    {% if alocado.projeto.proposta.observacoes %}
+      <strong>Outras observações :</strong> {{ alocado.projeto.proposta.observacoes|linebreaks|urlize}}<br>
+    {% endif %}
+  {% endif %}
+</div>
 
-<hr>
-<h5>Grupo</h5>
-<ul>
-  {% for membro in alocado.projeto.alocacao_set.all %} 
-    <li><a href="mailto:{{membro.aluno.user.email}}">{{membro.aluno.user.get_full_name}} &lt;{{membro.aluno.user.email}}&gt; [{{ membro.aluno.curso2 }}]
-    </a></li>
-  {% endfor %}
-</ul>
+<div>
+  {% if alocado.projeto.organizacao.logotipo %}
+    <img id="logotipo" src="{{ alocado.projeto.organizacao.logotipo.url }}" alt="{{ alocado.projeto.organizacao.sigla }}">
+  {% endif %}
 
-{% if alocado.projeto.encontro_set.all %}
-  <hr>
-  <h5>Mentorias Marcadas<br></h5>
-  <ul>
-    {% for dinamica in alocado.projeto.encontro_set.all %} 
-      <li>
-        {{dinamica.startDate}} - {{dinamica.endDate|date:'H:i'}}
-        {% if dinamica.location %}; em: <span style="word-break: break-all;">{{dinamica.location}}</span> {% endif %}
-        {% if dinamica.facilitador %}; com: {{dinamica.facilitador}} {% endif %}
+  <h5>Organização: {{ alocado.projeto.organizacao.nome }}</h5>
+  <strong>endereço:</strong> {{ alocado.projeto.organizacao.endereco|linebreaks }}<br>
+  <strong>website:</strong> <a href="{{ projeto.organizacao.website }}">{{ alocado.projeto.organizacao.website }}</a><br>
+</div>
+
+<div>
+  {% if alocado.projeto.orientador %}
+    <h5>Orientador{% if alocado.projeto.orientador.user.genero == 'F' %}a{% endif %}</h5>
+    <ul>
+      <li><a href="mailto:{{alocado.projeto.orientador.user.email}}">{{ alocado.projeto.orientador.user.get_full_name}}</a>
+        <span class="opt_full emails"><a class="email" href="mailto:{{alocado.projeto.orientador.user.email}}">&lt;{{alocado.projeto.orientador.user.email}}&gt;</a></span>
+        <span class="opt_short emails"><a class="email" href="mailto:{{alocado.projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
       </li>
+    </ul>
+  {% endif %}
+
+  <h5>Grupo</h5>
+  <ul>
+    {% for membro in alocado.projeto.alocacao_set.all %} 
+      <li>
+        <a href="mailto:{{membro.aluno.user.email}}">{{membro.aluno.user.get_full_name}}</a>
+        <span class="opt_full curso unselectable">[{{ membro.aluno.curso2 }}]</span>
+        <span class="opt_short curso unselectable">[{{ membro.aluno.curso2.sigla_curta }}]</span>
+        {% if membro.aluno.externo %}<span style="color:red">[{{membro.aluno.externo}}]</span>{% endif %}
+        <span class="opt_full emails"><a class="email" href="mailto:{{membro.aluno.user.email}}">&lt;{{membro.aluno.user.email}}&gt;</a></span>
+        <span class="opt_short emails"><a class="email" href="mailto:{{membro.aluno.user.email}}"><i class="far fa-envelope"></i></a></span>
+      </a></li>
     {% endfor %}
   </ul>
-{% endif %}
-<br>
+</div>
