feedback para professores se estão devendo alguma avaliação

--- a/projetos/templates/projetos/analise_objetivos.html
+++ b/projetos/templates/projetos/analise_objetivos.html
@@ -124,7 +124,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_geral.items %}
                                 {% if value.media >= 0 %}
@@ -267,7 +267,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_api.items %}
                                 {% if value.media >= 0 %}
@@ -352,7 +352,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_afi.items %}
                                 {% if value.media >= 0 %}
@@ -394,7 +394,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_afg.items %}
                                 {% if value.media >= 0 %}
@@ -436,7 +436,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_rii.items %}
                                 {% if value.media >= 0 %}
@@ -478,7 +478,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_rig.items %}
                                 {% if value.media >= 0 %}
@@ -520,7 +520,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_bi.items %}
                                 {% if value.media >= 0 %}
@@ -564,7 +564,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_rfi.items %}
                                 {% if value.media >= 0 %}
@@ -606,7 +606,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_rfg.items %}
                                 {% if value.media >= 0 %}
@@ -648,7 +648,7 @@
                         ],
                     datasets: [
                         {
-                        label: "{% if lingua == "pt" %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
+                        label: "{% if lingua == 'pt' %}Objetivos de Aprendizagem{% else %}Learning Goals{% endif %}",
                         backgroundColor: [
                             {% for key, value in medias_bf.items %}
                                 {% if value.media >= 0 %}
