--- a/templates/tabela_avaliacao_objetivos.html
+++ b/templates/tabela_avaliacao_objetivos.html
@@ -11,7 +11,7 @@
 </style>
 
 {% if objetivos %}
-  <br><h5 lang="pt">Objetivos de Aprendizagem</h5><h5 lang="en">Learning Goals</h5>
+  <br><h5 lang="pt">Objetivos de Aprendizagem</h5><h5 lang="en">Learning Goals</h5><br>
   {% for objetivo in objetivos %}
     <b lang="pt">{{objetivo.titulo}}</b><b lang="en">{{objetivo.titulo_en}}</b>: <span lang="pt">{{objetivo.objetivo}}</span><span lang="en">{{objetivo.objetivo_en}}</span>
     
