--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -6,6 +6,8 @@
 {% endcomment %}
 
 {% block head %}
+  {% load static %}
+  {% load get_field %}
   <style>
     textarea, input {max-width:100%;}
     .ent_nome {cursor:pointer;}
@@ -36,21 +38,21 @@
     Você já trabalhou/trabalha ou estagiou/estagia em alguma empresa de engenharia?<br>
     Se sim, qual/quais?
     </label><br>
-    <textarea id="trabalhou" name="trabalhou" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if estudante.trabalhou %}{{estudante.trabalhou}}{% endif %}</textarea>
+    <textarea id="trabalhou" name="trabalhou" rows="4" cols="80" maxlength="{% max_length Aluno 'trabalhou' %}" {% if vencido %}disabled{% endif %}>{% if estudante.trabalhou %}{{estudante.trabalhou}}{% endif %}</textarea>
     <br><br>
 
     <label for="social">
     Você já participou de atividades sociais? Por exemplo trabalhos voluntários ou ações em comunidades.<br>
     Se sim, qual/quais? <small>[Esse campo é importante se você está aplicando para um projeto de Inovação Social]</small>
     </label><br>
-    <textarea id="social" name="social" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if estudante.social %}{{estudante.social}}{% endif %}</textarea>
+    <textarea id="social" name="social" rows="4" cols="80" maxlength="{% max_length Aluno 'social' %}" {% if vencido %}disabled{% endif %}>{% if estudante.social %}{{estudante.social}}{% endif %}</textarea>
     <br><br>
 
     <label for="entidade">
     Você já participou de alguma entidade estudantil do Insper?<br>
     Liste as que você já participou?
     </label><br>
-    <textarea id="entidade" name="entidade" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if estudante.entidade %}{{estudante.entidade}}{% endif %}</textarea>
+    <textarea id="entidade" name="entidade" rows="4" cols="80" maxlength="{% max_length Aluno 'entidade' %}" {% if vencido %}disabled{% endif %}>{% if estudante.entidade %}{{estudante.entidade}}{% endif %}</textarea>
     <br>
     <small id="entidades" style="cursor:pointer;"><u>Lista de Entidades.</u></small>
     <!-- Pega Script para preencher entidades automaticamente -->
@@ -61,17 +63,17 @@
     Se sim, qual/quais? Qual seu grau de relacionamento.
     <small>[Só preencher depois de selecionar os projetos]</small>
     </label><br>
-    <textarea id="familia" name="familia" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if estudante.familia %}{{estudante.familia}}{% endif %}</textarea>
+    <textarea id="familia" name="familia" rows="4" cols="80" maxlength="{% max_length Aluno 'familia' %}" {% if vencido %}disabled{% endif %}>{% if estudante.familia %}{{estudante.familia}}{% endif %}</textarea>
     <br><br>
 
     <label for="linkedin">Caso desejar, você pode informar seu LinkedIn: (opcional)</label><br>
-    <input type="text" size="80" id="linkedin" name="linkedin" {% if estudante.user.linkedin %}value="{{estudante.user.linkedin}}"{% endif %} placeholder="https://www.linkedin.com/" {% if vencido %}disabled{% endif %}><br>
+    <input type="text" size="80" id="linkedin" name="linkedin" maxlength="{% max_length_menos PFEUser 'linkedin' 7 %}" {% if estudante.user.linkedin %}value="{{estudante.user.linkedin}}"{% endif %} placeholder="https://www.linkedin.com/" {% if vencido %}disabled{% endif %}><br>
     
     <br>
     <label for="celular">
       Caso desejar, você pode informar seu telefone celular: (opcional)<br>
     </label><br>
-    <input type="text" size="20" maxlength="20" id="celular" name="celular" {% if estudante.user.celular %}value="{{estudante.user.celular}}"{% endif %} placeholder="(XX)XXXX-XXXX" {% if vencido %}disabled{% endif %}>
+    <input type="text" size="20" maxlength="{% max_length PFEUser 'celular' %}" id="celular" name="celular" {% if estudante.user.celular %}value="{{estudante.user.celular}}"{% endif %} placeholder="(XX)XXXX-XXXX" {% if vencido %}disabled{% endif %}>
     <br><small><b class="text-danger">Iremos usar esse número para enviar avisos de forma não oficial pelo WhatsApp. A comunicação oficial é pelo seu e-mail de estudante!</b></small>
 
     <br><br>
